<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="popUpInsertTask"
            type="com.yoesuv.androidroom.menu.task.viewmodels.PopupInsertTaskViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:background="@color/pink_500"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center"
                android:text="@string/insert_new_task"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@android:color/white"/>

            <!-- input task title -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_task_margin">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editTextTaskTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_task_title"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    app:binding="@{popUpInsertTask.title}"/>

            </android.support.design.widget.TextInputLayout>

            <!-- input task content -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_task_margin">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/editTextTaskContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_task_content"
                    android:inputType="textMultiLine"
                    android:imeOptions="actionDone"
                    app:binding="@{popUpInsertTask.content}"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonNewTaskCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_new_task_cancel"
                    android:onClick="@{popUpInsertTask::clickCancel}"
                    style="?attr/borderlessButtonStyle"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/buttonNewTaskSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_new_task_save"
                    android:onClick="@{popUpInsertTask::clickSave}"
                    style="?attr/borderlessButtonStyle"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>