<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="popup"
            type="com.yoesuv.androidroom.menu.task.viewmodels.PopupInsertUpdateTaskViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/pink_500"
            android:gravity="center"
            android:text="@{popup.popupTitle}"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="@string/insert_new_task" />

        <!-- input task title -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_task_margin_v"
            app:error="@{popup.titleError}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTaskTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/hint_task_title"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:text="@={popup.title}" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- input task content -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_task_margin_v"
            app:error="@{popup.contentError}">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTaskContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:hint="@string/hint_task_content"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:text="@={popup.content}" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- style="?attr/borderlessButtonStyle" -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonCancel"
                style="@style/AppButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel"
                app:icon="@drawable/ic_delete_sign"
                app:layout_constraintEnd_toStartOf="@id/guidelineCenter"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonApply"
                style="@style/AppButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:onClick="@{popup::clickApply}"
                android:text="@{popup.buttonAction}"
                app:icon="@drawable/ic_save_as"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guidelineCenter"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/button_new_task_save" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</layout>